# LoxoneSmartHome

./: .coverage  .coverage.MacBookAir.localdomain.13044.XtpNJFrx  .env  .env.example  .env.pems-dry-run  .env.production  .gitattributes  .gitignore  .mypypath  CLAUDE.md  Dockerfile.pems-dry-run  Makefile  PRESENTATION.md  QUICKSTART.md  README.md  README_PEMS_DRY_RUN.md  TODO-Phase1.md  TODO-Phase2.md  TODO-Phase3.md  TODO-fixes.md  TODO.md  analyze_thermal_failures.py  correct_obyvak_analysis.py  docker-compose.pems-dry-run.yml  docker-compose.pems.yml  docker-compose.yml  env.chronograf  env.influxdb  env.loxone_to_mongo  env.mongo  heating_cycle_verification.md  loxone-db-grafana.sublime-workspace  mypy.ini  pems_dry_run_service.py  pyproject.toml  run.sh  setup.cfg  test_derivative_peak_detection.py  test_enhanced_decay_analysis.py  test_fixed_thermal_analysis.py  (+2 more)
loxone_to_db/: .gitignore  Cargo.toml  Dockerfile
loxone_to_db/src/: main.rs
loxone_to_influx/: Cargo.toml  Dockerfile
loxone_to_influx/src/: main.rs
loxone_to_mongo/: Cargo.toml
loxone_to_mongo/src/: main.rs
pems_v2/: .env.example  .env.test  .gitignore  CONTROL_IMPLEMENTATION_PATTERNS.md  Dockerfile  MATHEMATICAL_BACKGROUND.md  Makefile  PHASE2_COMPLETE_SUMMARY.md  PHASE2_PROGRESS.md  README.md  README_ANALYSIS.md  README_PHASE2.md  THERMAL_5MIN_RESAMPLING.md  __init__.py  corrected_analysis_report.py  main.py  pyproject.toml  requirements-basic.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_2year_analysis.py  run_analysis_script.py  setup.cfg  test_analysis.py  test_analysis_components.py  test_analysis_summary.py  test_data_extraction.py  test_fixed_analysis.py  test_full_pipeline.py  test_load_predictor_real_data.py  test_loxone_adapter.py  test_optimization_simple.py  test_pattern_analysis_integration.py  test_phase1_fixes.py  test_phase1_functionality.py  test_relay_analysis.py  test_simple.py  test_simple_connection.py  test_syntax_only.py  (+4 more)
pems_v2/analysis/: WINTER_ANALYSIS.md  __init__.py  base_load_analysis.py  daily_analysis.py  data_extraction.py  data_preprocessing.py  debug_rc_estimation.py  feature_engineering.py  pattern_analysis.py  run_analysis.py  thermal_analysis.py  visualization.py
pems_v2/analysis_notebooks/: 02_pv_production_analysis.ipynb  pv_production_analysis.ipynb  thermal_response.ipynb
pems_v2/config/: __init__.py  energy_settings.py  room_features.json  settings.py  system_config.json
pems_v2/examples/: control_system_demo.py
pems_v2/models/: __init__.py  base.py
pems_v2/modules/: __init__.py
pems_v2/tests/: README.md  __init__.py  conftest.py  test_base_models.py  test_base_models.py.bak  test_basic_structure.py  test_data_extraction.py  test_data_extraction.py.bak  test_load_predictor.py  test_load_predictor.py.bak  test_new_extractors.py  test_new_extractors.py.bak  test_pv_predictor.py  test_pv_predictor.py.bak  test_relay_analysis.py  test_relay_analysis.py.bak  test_settings.py  test_thermal_predictor.py  test_thermal_predictor.py.bak  test_unified_data_extractor.py  test_unified_data_extractor.py.bak
(+212 files in other folders)
