[package]
name = "loxone_to_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
influxrs = "2.0.0"
tokio = { version = "1.7", features = ["macros", "rt-multi-thread"] }
