[package]
name = "loxone_to_influx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
influxdb = { version = "0.5.1", features = ["derive"] }
async-std = { version = "1", features = ["attributes", "tokio1"] }
