[package]
name = "loxone_to_mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
envsubst = "0.2.0"
mongodb = "2.1"
serde = { version = "1.0", features = ["derive"] }
tokio = "1.15"